TST-5 Added navigation drawer on main activity. Made simple call to online weather API to show how to send HTTP requests.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="background_color">#efefef</color>
+    <color name="toolbar_color">#a2dcf9</color>
+    <color name="nav_drawer_color">#ededed</color>
 </resources>
