--- a/app/src/main/res/layout/fragment_browse_image.xml
+++ b/app/src/main/res/layout/fragment_browse_image.xml
@@ -6,11 +6,23 @@
     android:theme="@style/MainTheme"
     tools:context=".BrowseImageFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Andrew Fragment" />
+        android:layout_marginTop="?android:attr/actionBarSize">
+
+        <android.support.v4.view.PagerTitleStrip
+            android:id="@+id/pager_title_strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="#33b5e5"
+            android:textColor="#fff"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp" />
+
+    </android.support.v4.view.ViewPager>
 
 </FrameLayout>
