--- a/app/src/main/res/layout/fragment_create_image.xml
+++ b/app/src/main/res/layout/fragment_create_image.xml
@@ -19,7 +19,7 @@
         style="@android:style/Widget.Holo.Button.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="?android:attr/actionBarSize"
+        android:layout_marginTop="?android:attr/actionBarSize"
         android:text="Get Weather JSON"
         android:onClick="onButtonPress"/>
 
