--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="background_color">#efefef</color>
     <color name="toolbar_color">#a2dcf9</color>
     <color name="nav_drawer_color">#ededed</color>
+    <color name="nav_header_color">@color/toolbar_color</color>
 </resources>
