--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:background="@color/background_color"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?android:attr/actionBarSize">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
