TST-23 Got login working, database saving not working. Send more instructions

--- a/app/src/main/res/layout/fragment_browse_online.xml
+++ b/app/src/main/res/layout/fragment_browse_online.xml
@@ -3,14 +3,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/MainTheme"
     tools:context=".OnlineBrowseFragment"
     android:layout_marginTop="?android:attr/actionBarSize">
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <SearchView
+            android:id="@+id/onlineSearchView"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:iconifiedByDefault="false"/>
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_gravity="center|bottom"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/searchTypeSpinner"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <Spinner
+                android:id="@+id/orderSpinner"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+
         <ListView
             android:id="@+id/online_file_list"
             android:layout_width="fill_parent"
