--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -1,39 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/toast_image_icon"
+    <TextView
+        android:id="@+id/commenter"
+        android:textSize="14dp"
+        android:text="Username"
+        android:textStyle="bold"
+        android:paddingLeft="10dip"
+        android:paddingRight="10dip"
         android:layout_gravity="left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/toast_image_name"
-        android:textSize="20dp"
-        android:text="Filename"
-        android:paddingLeft="10dip"
-        android:layout_weight="0.1"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/toast_image_description"
+        android:id="@+id/comment"
         android:textSize="12dp"
-        android:text="Descrip"
+        android:text="This will be the body of the comment"
         android:paddingLeft="10dip"
-        android:layout_weight="0.6"
-        android:layout_gravity="center"
+        android:paddingRight="10dip"
+        android:layout_gravity="left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/toast_image_timestamp"
-        android:textSize="16dp"
+        android:id="@+id/comment_timestamp"
+        android:textSize="10dp"
         android:text="Timestamp"
         android:layout_gravity="right|bottom"
         android:paddingRight="10dip"
